# clinicalOutcomesApp

./: README.md  cache.p  ctg_interface.py  lda_clustering.py  main.py  pyproject.toml  testingGround.py
.github/workflows/: master_clinical-outcomes.yml
logs/: errorLog.txt
static/: errorLog.txt  slider.css  sortableTable.js  table2.css  table2.js
templates/: cacheTable.html  cluster.html  index.html  lda_vis.html  resTable.html  sortableTableOriginal.html  table2.html  table2_template.html
