[tool.poetry]
name = "clinicaloutcomes"
version = "0.1.0"
description = ""
authors = ["Anas Elghafari <anas.elghafari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
pandas = "^1.0"
pyldavis = "^2.1.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
